added summary of qualification

--- a/resume.tex
+++ b/resume.tex
@@ -40,6 +40,44 @@
 
 \begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
 
+\section{Skills}
+
+\subsection{Software Development}
+Scrum \textbullet{} Continuous Integration \textbullet{} \\
+Test Driven Development \textbullet{} Design Patterns
+
+\subsection{Embedded Software}
+Linux Kernel \textbullet{} MicroKernel Design \textbullet{} \\
+Device Drivers \textbullet{} Hyperviosr \textbullet{} \\
+BootLoader
+
+\subsection{OpenSource Tools}
+STL \textbullet{} Boost \textbullet SQLAlchemy \textbullet \\
+BaseX \textbullet{} Strace \textbullet{} Valgrind \textbullet{} \\
+Gradle \textbullet{} Jenkins
+
+\subsection{Architecture}
+X86 \textbullet{} IBM Power \textbullet{} Arm(v5,v7)
+
+\subsection{Version Control}
+git \textbullet{} gerrit \textbullet{} repo
+
+\subsection{Programming}
+\location{Experienced:}
+C \textbullet{} C++ \textbullet{} Assembly \textbullet{} Java \textbullet{} Python
+\location{Familiar:}
+Shell \textbullet{} Android \textbullet{} SQLite \textbullet \\
+XQuery \textbullet{} Groovy
+
+\sectionspace % Some whitespace after the section
+
+\section{Personal Project} 
+
+\subsection{\href{https://github.com/m943040028/prex}{\bf Prex}}
+\descript{Real-time MicroKernel for PPC}
+
+\sectionspace % Some whitespace after the section
+
 \section{Education}
 
 \subsection{Sun Yat-Sen University}
@@ -63,42 +101,6 @@ LinkedIn:// \href{http://lnkd.in/Exzyne}{\bf sy.chiu} \\
 
 \sectionspace % Some whitespace after the section
 
-\section{Skills}
-
-\subsection{Software Development}
-Scrum \textbullet{} Continuous Integration \textbullet{} \\
-Test Driven Development \textbullet{} Design Patterns
-
-\subsection{Embedded Software}
-Linux Kernel \textbullet{} MicroKernel Design \textbullet{} \\
-Device Drivers \textbullet{} Hyperviosr \textbullet{} \\
-BootLoader \textbullet{}
-
-\subsection{OpenSource Tools}
-STL \textbullet{} Boost \textbullet SQLAlchemy \textbullet \\
-BaseX \textbullet{} Strace \textbullet{} Valgrind
-
-\subsection{Architecture}
-X86 \textbullet{} IBM Power \textbullet{} Arm(v5,v7)
-
-\subsection{Version Control}
-git \textbullet{} gerrit
-
-\subsection{Programming}
-\location{Experienced:}
-C \textbullet{} C++ \textbullet{} Assembly \textbullet{} Java \textbullet{} Python
-\location{Familiar:}
-Shell \textbullet{} Android \textbullet{} SQLite \textbullet XQuery
-
-\sectionspace % Some whitespace after the section
-
-\section{Personal Project} 
-
-\subsection{\href{https://github.com/m943040028/prex}{\bf Prex}}
-\descript{Real-time MicroKernel for PPC}
-
-\sectionspace % Some whitespace after the section
-
 %----------------------------------------------------------------------------------------
 
 \end{minipage} % The end of the left column
@@ -109,6 +111,16 @@ Shell \textbullet{} Android \textbullet{} SQLite \textbullet XQuery
 %----------------------------------------------------------------------------------------
 %
 \begin{minipage}[t]{0.66\textwidth} % The right column takes up 66% of the text width of the page
+
+\section{Summary of Qualification} 
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item \bf Skilled in system software design and operating system kernel
+\item \bf Understanding the internal of computer architecture simulators
+\item \bf Familiar with Agile programming and Continuous Integration
+\item \bf Familiar with Arm Architecture
+\item \bf Solid understanding of C programming language
+\end{tightitemize}
 
 \section{Experience}
 
@@ -152,25 +164,19 @@ Shell \textbullet{} Android \textbullet{} SQLite \textbullet XQuery
 
 %------------------------------------------------
 
-\runsubsection{High-Tech Corporation (HTC)}
+\runsubsection{Wistron NeWeb Corporation (WNC)}
 \descript{| Principal Software Engineer}
 
 \location{Aug 2007 – Jan 2012 |Hsintsu, Taiwan}
 \begin{tightitemize}
 \item Linux Device driver development, integration and debugging. Focused on graphics, video/audio, usb, ethernet, flash based storage and i2c device drivers.
 \item Co-work with hardware engineer to do new platform bring-up.
-\item Developed Linux snapshot boot (conjunction with bootloader) which reduces system boot time by 70\%.
+\item Developed Linux snapshot boot(conjunction with bootloader) which reduces system boot time by 70\%.
 \item Implemented m2ts streaming program on an Android based set-top box. Enabled zero-copy decoding by integrating VLC MultiMedia framework with Ti Omap4 hardware codec and video pipelines hardware.
 \item Porting Real time operating system to a PowerPC 405 based platform.
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
-
-%\section{Awards} 
-
-%\begin{tabular}{rll}
-%2007 & Phi Tau Phi Scholastic Honor Society NSYSU
-%\end{tabular}
 
 \end{minipage} % The end of the right column
 
