--- a/resume.tex
+++ b/resume.tex
@@ -44,7 +44,8 @@
 
 \subsection{Software Development}
 Scrum \textbullet{} Continuous Integration \textbullet{} \\
-Test Driven Development \textbullet{} Design Patterns
+Test Driven Development \textbullet{} \\
+Design Patterns
 
 \subsection{Embedded Software}
 Linux Kernel \textbullet{} MicroKernel Design \textbullet{} \\
@@ -115,9 +116,11 @@ LinkedIn:// \href{http://lnkd.in/Exzyne}{\bf sy.chiu} \\
 \section{Summary of Qualification} 
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
+\item \bf Ability to define software architecture independently
 \item \bf Skilled in system software design and operating system kernel
 \item \bf Understanding the internal of computer architecture simulators
 \item \bf Familiar with Agile programming and Continuous Integration
+\item \bf Experienced in software refactoring
 \item \bf Familiar with Arm Architecture
 \item \bf Solid understanding of C programming language
 \end{tightitemize}
@@ -127,7 +130,7 @@ LinkedIn:// \href{http://lnkd.in/Exzyne}{\bf sy.chiu} \\
 \runsubsection{MediaTek}
 \descript{| Senior Software Engineer}
 
-\location{Apl 2014 – Current | Hsintsu, Taiwan}
+\location{Apl 2014 – Present | Hsintsu, Taiwan}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item Linaro Assignee, focused on secure environment system software development on arm.
